# task

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE.md  README.md  app.c  app.h  filesystem.c  filesystem.h  linux_build.dockerfile  linux_test.sh  main.c  tasks.c  tasks.h  windows_test.dockerfile  windows_test.sh
tests/: test_cli.sh
